--- a/netbox/docker-compose.yml
+++ b/netbox/docker-compose.yml
@@ -10,16 +10,17 @@ services:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U netbox"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      interval: 5s
+      timeout: 10s
+      retries: 10
+      start_period: 10s
 
   redis:
     image: redis:7-alpine
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
-      interval: 10s
-      timeout: 5s
+      interval: 5s
+      timeout: 10s
       retries: 5
 
   netbox:
@@ -33,6 +34,7 @@ services:
       - "0.0.0.0:8000:8080"
     environment:
       DB_HOST: postgres
+      DB_PORT: 5432
       DB_USER: netbox
       DB_PASSWORD: netbox
       DB_NAME: netbox
@@ -48,7 +50,7 @@ services:
       test: ["CMD", "wget", "--spider", "-q", "http://localhost:8080/api/status/"]
       interval: 15s
       timeout: 5s
-      retries: 5
+      retries: 10
 
 volumes:
   postgres_data:
